use proper flag format

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <script src="./dist.js"></script>
   <script>
-    const flag = countryflag('ES')
+    const flag = countryflag('KI')
     document.write(flag.emoji, '<br>');
     document.write(flag.name, '<br>');
     document.write('are emojis supported?:', flag.emoji !== undefined, '<br>');
